--- a/Web_Techonology/LAB/LAB_1/5.html
+++ b/Web_Techonology/LAB/LAB_1/5.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Students deatils</title>
+    <title>Image</title>
 </head>
 <body>
-    <h1>Name</h1>
-    <p>Tanmay Pandey</p>
-    <h1>Roll No.</h1>
-    <p>21052231</p>
-    <h1>Branch</h1>
-    <p>CSE</p>
+    <img src="C:\Users\pande\OneDrive\Pictures\Screenshots\Screenshot_20221221_000530.png">
 </body>
 </html>
