--- a/Web_Techonology/LAB/LAB_1/2.html
+++ b/Web_Techonology/LAB/LAB_1/2.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Employee Details</title>
 </head>
 <body>
-    
+    <h1>Name</h1>
+    <p>Tanmay Pandey</p>
+    <h1>Employee ID</h1>
+    <p>TP742003</p>
+    <h1>Work</h1>
+    <p>Server Handling</p>
 </body>
 </html>
