--- a/Web_Techonology/LAB/LAB_1/6.html
+++ b/Web_Techonology/LAB/LAB_1/6.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bio Data</title>
 </head>
 <body>
+    <h1><center>Bio data</center></h1>
     <img src="C:\Users\pande\OneDrive\Pictures\Screenshots\Screenshot_20221221_000530.png" align ="right" width="400">
     <p>Tanmay Pandey</p>
     <p>21052231</p>
-    <p>CSE 34</p>
+    <p>CSE 27</p>
 </body>
 </html>
