--- a/Web_Techonology/LAB/LAB_3/6.html
+++ b/Web_Techonology/LAB/LAB_3/6.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-    <frame>
-        
+<frameset rows=*,*>
+    <frameset cols="*,*">
+        <frame src="blue.html">
+        <frame src="orange.html">
+    </frameset>
+    <frameset cols="*,*">
+        <frame src="blue.html">
+        <frame src="orange.html">
+    </frameset>
+</frameset>
+
 </html>
