--- a/Web_Techonology/LAB/LAB_3/3.html
+++ b/Web_Techonology/LAB/LAB_3/3.html
@@ -9,9 +9,9 @@
     <form>
         <fieldset>
             <legend style="text-align: center;">Facebook Registration Form</legend>
-            First Name : <input type="text" name="fname"><br>
+            First Name : <input type="text"><br>
             Last Name : <input type="text" name="lname"><br>
-            Password : <input type="password" name="password"><br>
+            Password   : <input type="password" name="password"><br>
             ReEnter Password : <input type="password" name="repassword"><br><br>
 
             <p>Gender</p>
